# uv-questions-api

./: .env  Cargo.toml  Dockerfile.amd  Dockerfile.arm  README-endpoinds.md  README.md  Rocket.toml  compose.yaml  rest.http
src/: main.rs  routes.rs  server.rs
src/app/: mod.rs
src/app/controllers/: answer.rs  form.rs  form_question.rs  mod.rs  paper.rs  question.rs  user.rs
src/app/models/: answer.rs  form.rs  form_question.rs  mod.rs  paper.rs  paper_answer.rs  question.rs  user.rs
src/app/repositories/: answer.rs  form.rs  form_question.rs  mod.rs  paper.rs  paper_answer.rs  question.rs  user.rs
src/config/: cors.rs  database.rs  mod.rs
src/database/: schema.rs
src/database/migrations/2023-02-03-120850_question/: up.sql
src/database/migrations/2023-02-03-195335_form/: down.sql  up.sql
src/database/migrations/2023-02-03-195356_form_question/: down.sql  up.sql
src/database/migrations/2023-02-04-182246_user/: down.sql  up.sql
src/database/migrations/2023-02-05-102707_answer/: up.sql
src/database/migrations/2023-02-05-103453_form_answer/: down.sql  up.sql
src/database/migrations/2023-02-05-162947_paper/: down.sql  up.sql
src/database/migrations/2023-02-05-172228_paper_answer/: down.sql  up.sql
