[package]
name = "uv-question-api"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.3"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
openssl = "*" # Para compilación en musl
time = "0.2" # Para compilación en musl

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
